# profit-calculator

./: .env.example  .gitignore  README.md  nicegui_app.py  package-lock.json  package.json  pyproject.toml  streamlit_app.py
profit_calc/: __init__.py  minimax_client.py  nicegui_calc.py  nicegui_position.py  pct_to_price.py  position_extract.py  position_ui.py  price_to_pct.py  serve.py  serve_nicegui.py  t_net_profit.py  ui.py
scripts/: check_mmx_key.py  minimax_position_table.py  start-nicegui.ps1  start-nicegui.sh  start.ps1  start.sh
scripts/deploy/: deploy.sh  profit-calculator.service
static/: manifest.json
